# lekion

./: .env.backend.example  .env.frontend.example  .gitignore  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 428ff63d94e1_initial.py  5cb17b9346e2_add_user_links.py  a1b2c3d4e5f6_search_vector_triggers.py  b2c3d4e5f6a7_add_business_members.py  c3d4e5f6a7b8_add_telegram_id.py  d4e5f6a7b8c9_add_bot_chats.py  e5f6a7b8c9d0_seed_categories.py  e7e07ceaf042_add_projects.py  f6a7b8c9d0e1_add_yandex_id.py  g7h8i9j0k1l2_add_incomplete_status.py  h8i9j0k1l2m3_add_location_precision.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  bot.py  businesses.py  categories.py  map.py  reviews.py  users.py
backend/app/core/: deps.py  redis.py  security.py
backend/app/models/: __init__.py  bot_chat.py  business.py  category.py  link.py  project.py  referral.py  review.py  user.py
backend/app/schemas/: auth.py  business.py  map.py  review.py  user.py
backend/app/services/: auth_service.py  search_service.py  telegram_bot.py
backend/app/utils/: images.py
backend/scripts/: seed_categories.py  seed_users.py
docs/: api.md  architecture.md  database.md  deployment.md  frontend.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/messages/: en.json  ru.json
frontend/src/: i18n.ts  middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
nginx/: nginx.conf
(+41 files in other folders)
